@@ -1416,7 +1416,7 @@ static bool isMapLoaded() { return Core::getInstance().isMapLoaded(); }
 
 static std::string df2utf(std::string s) { return DF2UTF(s); }
 static std::string utf2df(std::string s) { return UTF2DF(s); }
-static std::string df2console(std::string s) { return DF2CONSOLE(s); }
+static std::string df2console(color_ostream &out, std::string s) { return DF2CONSOLE(out, s); }
 
 #define WRAP_VERSION_FUNC(name, function) WRAPN(name, DFHack::Version::function)
 
