@@ -39,6 +39,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Fixes
 -@ Console: fixed crash when entering long commands on Linux/macOS
+- Fixed special characters in `command-prompt` and other non-console in-game outputs on Linux/macOS (in tools using ``df2console``)
 - `startdwarf`: fixed on 64-bit Linux
 
 ## Structures
